fix: overflow by layout

--- a/css/style.scss
+++ b/css/style.scss
@@ -33,6 +33,7 @@ a {
 	align-items: center;
 	width: 100vw;
 	height: 100vh;
+    overflow: hidden;
 }
 
 .header {
